# feedbackreportgenerator

./: README.md  db.sqlite3  docker.compose.yml  feedback_docker  feedback_docker.celery  manage.py  pyproject.toml
feedbackreportgenerator/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
reports/: models.py  tasks.py  urls.py  views.py
reports/migrations/: 0001_initial.py
